--- a/binarySearch/index.html
+++ b/binarySearch/index.html
@@ -30,6 +30,12 @@
     </section>  
   </main>
 
+  <div class="main__buttons">
+    <button class="main__btn">111</button>
+    <button class="main__btn">222</button>
+    <button class="main__btn">333</button>
+  </div>
+  
   <script src="index.js"></script>
 </body>
 </html>
